--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             </a>
       </div>
         <section>
-            <h2 class="fontSize fontWeight text-center">✹ Manos / barro / fuego ✹</h2>
-            <h1 class="fontSize2 text-center">Piezas únicas de cerámica creadas de manera artesanal. Objetos imperfectos que exploran las formas.</h1>
+            <h2 class="fontSize fontWeight text-center marginH">✹ Manos / barro / fuego ✹</h2>
+            <h1 class="fontSize2 text-center h2 marginH">Piezas únicas de cerámica creadas de manera artesanal. Objetos imperfectos que exploran las formas.</h1>
         </section>
         <!--Sección envios-cuotas-10%efectivo-->
           <section>
@@ -162,11 +162,8 @@
                   </div>
               </section>    
              <!--Botón ver todos los productos-->
-                    <div>
-                      <a href="productos.html" class="textDecoration"><button type="button" class="btn mibotonIndex btn-info">Ver todos los productos</button></a>
-                    </div>
              <!--Footer-->
-                      <div class="d-flex contenedorRedes">
+                      <div class="contenedorRedes">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
                               <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
                             </svg>
