--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                   <div id="contenedorProductos">
                       <img src="img/prodindex1.jpg" loading="lazy" alt="">
                       <img src="img/prodindex2.jpg" loading="lazy" alt="">
-                      <p class="fontWCateg">Producto 1</p>
+                      <p class="fontWCateg">Pro>ducto 1</p>
                       <p class="fontWCateg">Producto 2</p>
                       <p class="textCenter fontwBold fontSizePrecios">$2000</p>
                       <p class="textCenter fontwBold fontSizePrecios">$2500</p>
