--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </a>
       </div>
         <section>
-            <h2 class="fontSize fontWeight text-center marginH">✹ Manos / barro / fuego ✹</h2>
+            <h2 class="fontSize fontwBold text-center marginH">✹ Manos / barro / fuego ✹</h2>
             <h1 class="fontSize2 text-center h2 marginH">Piezas únicas de cerámica creadas de manera artesanal. Objetos imperfectos que exploran las formas.</h1>
         </section>
         <!--Sección envios-cuotas-10%efectivo-->
