--- a/productos.html
+++ b/productos.html
@@ -57,7 +57,7 @@
           <div class="d-flex container-fluid" id="productosPadre">
               <div class="caja">
                   <div>
-                      <img src="img/prodindex1.jpg" alt="taza">
+                      <img src="img/tazacuadrillé.jpg" alt="taza">
                   </div>
                   <div class="texto">
                       <h3 class="text-center fontWCateg">Taza cuadrillé</h3>
