4to cambio prod index

--- a/index.html
+++ b/index.html
@@ -169,20 +169,20 @@
               <section>  
                   <p class="m-top-prod subtitulos text-center">Productos destacados</p>
                   <div id="contenedorProductos">
-                      <img src="img/prodindex1.jpg" loading="lazy" alt="">
-                      <img src="img/prodindex2.jpg" loading="lazy" alt="">
+                      <img src="img/prodindex1.jpg" loading="lazy" alt="taza de cerámica con manchas">
+                      <img src="img/prodindex2.jpg" loading="lazy" alt=" maceta de cerámica">
                       <p class="fontWCateg">Pro>ducto 1</p>
                       <p class="fontWCateg">Producto 2</p>
                       <p class="textCenter fontwBold fontSizePrecios">$2000</p>
                       <p class="textCenter fontwBold fontSizePrecios">$2500</p>
-                      <img src="img/prodindex3.jpg" loading="lazy" alt="">
-                      <img src="img/prodindex4.jpg" loading="lazy" alt="">
+                      <img src="img/prodindex3.jpg" loading="lazy" alt="maceta/taza de cerámica">
+                      <img src="img/prodindex4.jpg" loading="lazy" alt="florero de cerámica">
                       <p class="fontWCateg">Producto 3</p>
                       <p class="fontWCateg">Producto 4</p>
                       <p class="textCenter fontwBold fontSizePrecios">$2000</p>
                       <p class="textCenter fontwBold fontSizePrecios">$2500</p>
-                      <img src="img/prodindex5.jpg" loading="lazy" alt="">
-                      <img src="img/prodindex6.jpg" loading="lazy" alt="">
+                      <img src="img/prodindex5.jpg" loading="lazy" alt="florero de cerámica">
+                      <img src="img/prodindex6.jpg" loading="lazy" alt="maceta con base">
                       <p class="fontWCateg">Producto 5</p>
                       <p class="fontWCateg">Producto 6</p>
                       <p class="textCenter fontwBold fontSizePrecios">$2000</p>
