--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                   <div class="textbanner-text">
                                       <div class="textbanner-title">MACETAS</div>
                                       <div class="textbanner-paragraph">New Collection</div>
-                                      <div class="btn buttonComprar btn-primary btn-small">Ver más</div>
+                                      <div class="btn buttonComprar btn-info btn-small">Ver más</div>
                                   </div>
                               </a>
                           </div>
@@ -96,12 +96,12 @@
                           <div class="textbanner text-center placeholder-container">
                               <a class="textbanner-link" href="productos.html">
                                   <div class="textbanner-image overlay">
-                                      <img class=" imgCategorias textbanner-image-background blur" loading="lazy" src="img/tazasindex.jpg" alt="tazas de cerámica">
+                                      <img class=" imgCategorias blur" loading="lazy" src="img/tazasindex.jpg" alt="tazas de cerámica">
                                   </div>
                                   <div class="textbanner-text">
                                       <div class="textbanner-title">TAZAS</div>
                                       <div class="textbanner-paragraph">New Collection</div>
-                                      <div class="btn buttonComprar btn-primary btn-small">Ver más</div>
+                                      <div class="btn buttonComprar btn-info btn-small">Ver más</div>
                                   </div>
                               </a>
                           </div>
@@ -110,12 +110,12 @@
                           <div class="textbanner text-center placeholder-container">
                               <a class="textbanner-link" href="productos.html">
                                   <div class="textbanner-image overlay">
-                                      <img class="imgCategorias textbanner-image-background blur" loading="lazy" src="img/florerosindex.jpg" alt="tazas de cerámica">
+                                      <img class="imgCategorias blur" loading="lazy" src="img/florerosindex.jpg" alt="tazas de cerámica">
                                   </div>
                                   <div class="textbanner-text">
                                       <div class="textbanner-title">FLOREROS</div>
                                       <div class="textbanner-paragraph">New Collection</div>
-                                      <div class="btn  buttonComprar btn-primary btn-small">Ver más</div>
+                                      <div class="btn  buttonComprar btn-info btn-small">Ver más</div>
                                   </div>
                               </a>
                           </div>
@@ -124,12 +124,12 @@
                           <div class="textbanner text-center placeholder-container">
                               <a class="textbanner-link" href="productos.html">
                                   <div class="textbanner-image overlay">
-                                      <img class="imgCategorias textbanner-image-background blur" loading="lazy" src="img/piezasunicasindex.jpg" alt="tazas de cerámica">
+                                      <img class="imgCategorias blur" loading="lazy" src="img/piezasunicasindex.jpg" alt="tazas de cerámica">
                                   </div>
                                   <div class="textbanner-text">
                                       <div class="textbanner-title">PIEZAS ÚNICAS</div>
                                       <div class="textbanner-paragraph">New Collection</div>
-                                      <div class="btn buttonComprar btn-primary btn-small">Ver más</div>
+                                      <div class="btn buttonComprar btn-info btn-small">Ver más</div>
                                   </div>
                               </a>
                           </div>
@@ -138,12 +138,12 @@
                         <div class="textbanner text-center placeholder-container">
                             <a class="textbanner-link" href="productos.html">
                                 <div class="textbanner-image overlay">
-                                    <img class="imgCategorias textbanner-image-background blur" loading="lazy" src="img/cuencosindex.jpg" alt="tazas de cerámica">
+                                    <img class="imgCategorias blur" loading="lazy" src="img/cuencosindex.jpg" alt="tazas de cerámica">
                                 </div>
                                 <div class="textbanner-text">
                                     <div class="textbanner-title">CUENCOS</div>
                                     <div class="textbanner-paragraph">New Collection</div>
-                                    <div class="btn buttonComprar btn-primary btn-small">Ver más</div>
+                                    <div class="btn buttonComprar btn-info btn-small">Ver más</div>
                                 </div>
                             </a>
                         </div>
@@ -152,12 +152,12 @@
                         <div class="textbanner text-center placeholder-container">
                             <a class="textbanner-link" href="productos.html">
                                 <div class="textbanner-image overlay">
-                                    <img class="imgCategorias textbanner-image-background blur" loading="lazy" src="img/piezasindex.jpg" alt="jarras de cerámica">
+                                    <img class="imgCategorias blur" loading="lazy" src="img/piezasindex.jpg" alt="jarras de cerámica">
                                 </div>
                                 <div class="textbanner-text">
                                     <div class="textbanner-title">JARRAS</div>
                                     <div class="textbanner-paragraph">New Collection</div>
-                                    <div class="btn buttonComprar btn-primary btn-small">Ver más</div>
+                                    <div class="btn buttonComprar btn-info btn-small">Ver más</div>
                                 </div>
                             </a>
                         </div>
@@ -171,7 +171,7 @@
                   <div id="contenedorProductos">
                       <img src="img/prodindex1.jpg" loading="lazy" alt="taza de cerámica con manchas">
                       <img src="img/prodindex2.jpg" loading="lazy" alt=" maceta de cerámica">
-                      <p class="fontWCateg">Pro>ducto 1</p>
+                      <p class="fontWCateg">Producto 1</p>
                       <p class="fontWCateg">Producto 2</p>
                       <p class="textCenter fontwBold fontSizePrecios">$2000</p>
                       <p class="textCenter fontwBold fontSizePrecios">$2500</p>
@@ -190,6 +190,9 @@
                   </div>
               </section>    
              <!--Botón ver todos los productos-->
+                <div class="container text-center">
+                  <a href="productos.html" class="textDecoration"><button type="button" class="btn btn-info">Ver más productos</button></a>
+                </div>
              <!--Footer-->
                       <div class="contenedorRedes">
                             <svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" fill="currentColor" class="bi bi-facebook facebook" viewBox="0 0 16 16">
