--- a/contacto.html
+++ b/contacto.html
@@ -49,14 +49,14 @@
           <p class="contactoTitulo"><b>Contacto</b></p>
           <div class="d-flex" id="contacto" >
               <div><img src="img/contacto1.jpg" loading="lazy" width="300px" alt="Macetas, floreros y tazas"></div>
-              <form class="marginForm bcForm">
+              <form class="marginForm bcForm" method="POST" action="email.php">
                 <div class="form-group">
                   <label for="exampleFormControlInput1">Nombre</label>
-                  <input type="text" class="form-control marginInput" id="exampleFormControlInput1" placeholder="Escriba aquí su nombre" required>
+                  <input name="inp_nombre" type="text" class="form-control marginInput" id="exampleFormControlInput1" placeholder="Escriba aquí su nombre" required>
                   <label for="exampleFormControlInput2">Email</label>
-                  <input type="email" class="form-control marginInput" id="exampleFormControlInput2" placeholder="nombre@ejemplo.com" required>
+                  <input name="inp_email" type="email" class="form-control marginInput" id="exampleFormControlInput2" placeholder="nombre@ejemplo.com" required>
                   <label for="exampleFormControlInput3">Teléfono (opcional)</label>
-                  <input type="tel" class="form-control marginInput" id="exampleFormControlInput3" placeholder="Ej: +541138050084">
+                  <input name="inp_tel" type="tel" class="form-control marginInput" id="exampleFormControlInput3" placeholder="Ej: +541138050084">
                 </div>
                 <div class="form-group">
                   <label for="exampleFormControlTextarea1">Mensaje</label>
@@ -66,7 +66,7 @@
                       <option value="2">Envíos</option>
                       <option value="3">Otros</option>
                     </select>
-                  <textarea class="form-control" id="exampleFormControlTextarea1" required rows="3"></textarea>
+                  <textarea name='inp_mensaje' class="form-control" id="exampleFormControlTextarea1" required rows="3"></textarea>
                 </div>
                 <div class="col-auto">
                     <button type="submit" class="btn botonContacto btn-info mb-2">Enviar formulario</button>
