--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             </a>
       </div>
         <section>
-            <h2 class="fontSize fontwBold text-center marginH">✹ Manos / barro / fuego ✹</h2>
-            <h1 class="fontSize2 text-center h2 marginH">Piezas únicas de cerámica creadas de manera artesanal. Objetos imperfectos que exploran las formas.</h1>
+            <h2 class="fontsize-manos fontwBold text-center marginH">✹ Manos / barro / fuego ✹</h2>
+            <h1 class="fontsize-piezas text-center h2 marginH">Piezas únicas de cerámica creadas de manera artesanal. Objetos imperfectos que exploran las formas.</h1>
         </section>
         <!--Sección envios-cuotas-10%efectivo-->
           <section>
@@ -78,11 +78,11 @@
                 <p class="categorias text-center">Categorias principales</p>
                 <div class="container-wide banner-wrapper m-top m-bottom m-bottom-half-xs p-relative">
                   <div class="row-fluid">
-                      <div class="span4">
+                      <div class="span4 col-12 col-md-6 col-lg-4">
                           <div class="textbanner text-center placeholder-container">
                               <a class="textbanner-link" href="productos.html">
                                   <div class="textbanner-image overlay">
-                                      <img class="imgCategorias blur" loading="lazy" src="img/macetasindex.jpg" alt="macetas de cerámica">
+                                      <img class="imgCategorias blur" loading="lazy" src="img/macetasindex.jpg" srcset="img/macetasindex.jpg, img/macetasindex.jpg 2x"alt="macetas de cerámica">
                                   </div>
                                   <div class="textbanner-text">
                                       <div class="textbanner-title">MACETAS</div>
@@ -92,11 +92,11 @@
                               </a>
                           </div>
                       </div>
-                      <div class="span4">
+                      <div class="span4 col-12 col-md-6 col-lg-4">
                           <div class="textbanner text-center placeholder-container">
                               <a class="textbanner-link" href="productos.html">
                                   <div class="textbanner-image overlay">
-                                      <img class=" imgCategorias blur" loading="lazy" src="img/tazasindex.jpg" alt="tazas de cerámica">
+                                      <img class=" imgCategorias blur" loading="lazy" src="img/tazasindex.jpg" srcset="img/tazasindex.jpg, img/tazasindex.jpg 2x" alt="tazas de cerámica">
                                   </div>
                                   <div class="textbanner-text">
                                       <div class="textbanner-title">TAZAS</div>
@@ -106,11 +106,11 @@
                               </a>
                           </div>
                       </div>
-                      <div class="span4">
+                      <div class="span4 col-12 col-md-6 col-lg-4">
                           <div class="textbanner text-center placeholder-container">
                               <a class="textbanner-link" href="productos.html">
                                   <div class="textbanner-image overlay">
-                                      <img class="imgCategorias blur" loading="lazy" src="img/florerosindex.jpg" alt="Floreros de cerámica">
+                                      <img class="imgCategorias blur" loading="lazy" src="img/florerosindex.jpg" srcset="img/florerosindex.jpg, img/florerosindex.jpg 2x" alt="Floreros de cerámica">
                                   </div>
                                   <div class="textbanner-text">
                                       <div class="textbanner-title">FLOREROS</div>
@@ -120,11 +120,11 @@
                               </a>
                           </div>
                       </div>
-                      <div class="span4">
+                      <div class="span4 col-12 col-md-6 col-lg-4">
                           <div class="textbanner text-center placeholder-container">
                               <a class="textbanner-link" href="productos.html">
                                   <div class="textbanner-image overlay">
-                                      <img class="imgCategorias blur" loading="lazy" src="img/piezasunicasindex.jpg" alt="Piezas únicas de cerámica">
+                                      <img class="imgCategorias blur" loading="lazy" src="img/piezasunicasindex.jpg" srcset="img/piezasunicasindex.jpg, img/piezasunicasindex.jpg 2x" alt="Piezas únicas de cerámica">
                                   </div>
                                   <div class="textbanner-text">
                                       <div class="textbanner-title">PIEZAS ÚNICAS</div>
@@ -134,11 +134,11 @@
                               </a>
                           </div>
                       </div>
-                      <div class="span4">
+                      <div class="span4 col-12 col-md-6 col-lg-4">
                         <div class="textbanner text-center placeholder-container">
                             <a class="textbanner-link" href="productos.html">
                                 <div class="textbanner-image overlay">
-                                    <img class="imgCategorias blur" loading="lazy" src="img/cuencosindex.jpg" alt="Cuencos de cerámica">
+                                    <img class="imgCategorias blur" loading="lazy" src="img/cuencosindex.jpg" srcset="img/cuencosindex.jpg, img/cuencosindex.jpg 2x" alt="Cuencos de cerámica">
                                 </div>
                                 <div class="textbanner-text">
                                     <div class="textbanner-title">CUENCOS</div>
@@ -148,11 +148,11 @@
                             </a>
                         </div>
                       </div>
-                      <div class="span4">
+                      <div class="span4 col-12 col-md-6 col-lg-4">
                         <div class="textbanner text-center placeholder-container">
                             <a class="textbanner-link" href="productos.html">
                                 <div class="textbanner-image overlay">
-                                    <img class="imgCategorias blur" loading="lazy" src="img/piezasindex.jpg" alt="jarras de cerámica">
+                                    <img class="imgCategorias blur" loading="lazy" src="img/piezasindex.jpg" srcset="img/piezasindex.jpg, img/piezasindex.jpg 2x" alt="jarras de cerámica">
                                 </div>
                                 <div class="textbanner-text">
                                     <div class="textbanner-title">JARRAS</div>
@@ -169,20 +169,20 @@
               <section>  
                   <p class="m-top-prod subtitulos text-center">Productos destacados</p>
                   <div id="contenedorProductos">
-                      <img src="img/prodindex1.jpg" loading="lazy" alt="taza de cerámica con manchas">
-                      <img src="img/prodindex2.jpg" loading="lazy" alt=" maceta de cerámica">
+                      <img src="img/prodindex1.jpg" srcset="img/prodindex1.jpg, img/prodindex1.jpg 2x" loading="lazy" alt="taza de cerámica con manchas">
+                      <img src="img/prodindex2.jpg" srcset="img/prodindex2.jpg, img/prodindex2.jpg 2x" loading="lazy" alt=" maceta de cerámica">
                       <a href="productos.html" class="item-link"><p class="fontWCateg">Taza Parches</p></a>
                       <a href="productos.html" class="item-link"><p class="fontWCateg">Maceta Xl Face</p></a>
                       <p class="textCenter fontwBold fontSizePrecios">$1600</p>
                       <p class="textCenter fontwBold fontSizePrecios">$2500</p>
-                      <img src="img/prodindex3.jpg" loading="lazy" alt="maceta/taza de cerámica">
-                      <img src="img/prodindex4.jpg" loading="lazy" alt="florero de cerámica">
+                      <img src="img/prodindex3.jpg" srcset="img/prodindex3.jpg, img/prodindex3.jpg 2x" loading="lazy" alt="maceta/taza de cerámica">
+                      <img src="img/prodindex4.jpg" srcset="img/prodindex4.jpg, img/prodindex4.jpg 2x" loading="lazy" alt="florero de cerámica">
                       <a href="productos.html" class="item-link"><p class="fontWCateg">Taza Nipples</p></a>
                       <a href="productos.html" class="item-link"><p class="fontWCateg">Florero M1</p></a>
                       <p class="textCenter fontwBold fontSizePrecios">$1500</p>
                       <p class="textCenter fontwBold fontSizePrecios">$1990</p>
-                      <img src="img/prodindex5.jpg" loading="lazy" alt="florero de cerámica">
-                      <img src="img/prodindex6.jpg" loading="lazy" alt="maceta con base">
+                      <img src="img/prodindex5.jpg" srcset="img/prodindex5.jpg, img/prodindex5.jpg 2x" loading="lazy" alt="florero de cerámica">
+                      <img src="img/prodindex6.jpg" srcset="img/prodindex6.jpg, img/prodindex6.jpg 2x" loading="lazy" alt="maceta con base">
                       <a href="productos.html" class="item-link"><p class="fontWCateg">Florero M2</p></a>
                       <a href="productos.html" class="item-link"><p class="fontWCateg">Maceta Base</p></a>
                       <p class="textCenter fontwBold fontSizePrecios">$1990</p>
@@ -191,7 +191,7 @@
               </section>    
              <!--Botón ver todos los productos-->
                 <div class="container text-center">
-                  <a href="productos.html" class="textDecoration"><button type="button" class="btn btn-info">Ver más productos</button></a>
+                  <a href="productos.html"><button type="button" class="btn btn-generico btn-info mb-2">Ver más productos</button></a>
                 </div>
              <!--Footer-->
                     <div class="d-flex contenedorRedes">
