--- a/contacto.html
+++ b/contacto.html
@@ -47,8 +47,8 @@
       </nav>
   <!--Contacto-->
           <p class="contactoTitulo"><b>Contacto</b></p>
-          <div class="d-flex row" id="contacto" >
-              <div><img src="img/contacto1.jpg" srcset="img/contacto1.jpg, img/contacto1.jpg 2x" loading="lazy" alt="Macetas, floreros y tazas"></div>
+          <div class="d-flex" id="contacto" >
+              <div><img src="img/contacto1.jpg" loading="lazy" width="300px" alt="Macetas, floreros y tazas"></div>
               <form class="marginForm bcForm" method="POST" action="email.php">
                 <div class="form-group">
                   <label for="exampleFormControlInput1">Nombre</label>
