cambio en filtros de productos

--- a/productos.html
+++ b/productos.html
@@ -48,7 +48,8 @@
        <!--ACÁ PUSE BOTONES, PERO AÚN NO REDIRECCIONAN A OTRAS PÁGINAS-->
       <h1 class="titulos">Productos</h1>
       <nav class="nav">
-          <a class="nav-link liNav active" href="#cuenco">CUENCOS</a>
+          <a class="nav-link liNav active" href="productos.html">TODOS</a>
+          <a class="nav-link liNav" href="#cuenco">CUENCOS</a>
           <a class="nav-link liNav" href="#taza">TAZAS</a>
           <a class="nav-link liNav" href="#maceta">MACETAS</a>
           <a class="nav-link liNav" href="#florero">FLOREROS</a>
