--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html lang="es">
-  <head>
-    <meta name="description" content="Bienvenido a Sasha Pottery. Taller de producción cerámica artesanal. Creamos piezas únicas explorando las formas.">  
-    <meta name="keywords" content="cerámica artesanal pottery bazaar macetas tazas">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/estilos.css">
-    <title>Inicio - Sasha Pottery</title>
-  </head>
+<head>
+  <title>Productos de cerámica - Sasha Pottery</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/estilos.css"/>
+  <meta name="description" content="Bienvenido a Sasha Pottery. Taller de producción cerámica artesanal. Creamos piezas únicas explorando las formas.">  
+  <meta name="keywords" content="cerámica artesanal pottery bazaar macetas tazas">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+</head>
   <body>
     <!--Header-->
     <header id="header" class="container-fluid">
